Should fix checkbox layout issue

--- a/app/src/css/mx_base.css
+++ b/app/src/css/mx_base.css
@@ -105,7 +105,7 @@ picture {
 }
 
 input[type="checkbox"] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /**
@@ -1048,6 +1048,21 @@ code {
 }
 .alert.alert-danger {
   border-color: var(--mx_ui_message_danger);
+}
+
+.checkbox label,
+.radio label {
+  display: flex;
+  align-items: start;
+  /*justify-content: space-between;*/
+}
+
+.checkbox-inline input[type="checkbox"],
+.checkbox input[type="checkbox"],
+.radio-inline input[type="radio"],
+.radio input[type="radio"] {
+  position: inherit;
+  margin: 4px;
 }
 
 /**
