--- a/app/src/css/mx_modifiers.css
+++ b/app/src/css/mx_modifiers.css
@@ -202,9 +202,6 @@ span.mx-badge-role {
   background-color: var(--mx_ui_background);
 }
 
-.mx input[type="checkbox"] {
-  margin: 0px;
-}
 
 .mx .btn-warning {
   border-color: var(--mx_ui_message_warning);
